--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,5 @@
 <footer>
   <small>
-    This project is maintained by <a href="https://www.danurbanowicz.com">Dan Urbanowicz</a>.
-    Check out the <a href="{{ pkg.repository.url }}">GitHub repo</a>.
+    Check out this page's <a href="https://github.com/ukusormus/homepage">GitHub repo</a>. Based on <a href="https://github.com/danurbanowicz/eleventy-netlify-boilerplate">11ty + Netlify boilerplate</a>.
   </small>
 </footer>
