css: center stuff

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -29,7 +29,18 @@ body {
 	display: grid;
 	height: 100vh;
 	grid-template-rows: auto 1fr auto;
+	justify-content: center; /* Center body */
+	
 	background-color: var(--background);
+}
+
+header {
+	display: grid;
+	justify-content: center;
+}
+
+header > nav {
+	margin: auto;
 }
 
 main {
