--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -2,8 +2,8 @@
   {% set navPages = collections.all | eleventyNavigation %}
   <ul>
   {%- for entry in navPages %}
-    <li>
-      <a href="{{ entry.url | url }}"{% if entry.url == page.url %} data-current="current item"{% endif %}>{{ entry.title }}</a>
+    <li id="{{ entry.title | toLowerCase }}" {% if entry.url == page.url %} data-current="current item"{% endif %}>
+      <a href="{{ entry.url | url }}">{{ entry.title }}</a>
     </li>
   {%- endfor %}
   </ul>
