--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ renderData.title or title or metadata.title }} – Uku Sõrmus</title>
   <meta name="description" content="{{ metaDescription or renderData.metaDescription or metadata.description }}">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   {% set css %}
     {% include "assets/css/inline.css" %}
