--- a/_includes/components/postslist.njk
+++ b/_includes/components/postslist.njk
@@ -1,7 +1,7 @@
-<section>
+<section class="postslist">
 	{% for post in postslist | reverse %}
-		<article{% if post.url == url %} data-current="current item"{% endif %}>
-			<h3>
+		<article {% if post.url == url %} data-current="current item"{% endif %}>
+			<h3 class="posttitle">
 				<a href="{{ post.url | url }}">
 					{% if post.data.title %}
 						{{ post.data.title }}
@@ -15,12 +15,22 @@
 					{{ post.data.summary }}
 				</p>
 			{% endif %}
-			<p>
+			<p class="postmeta">
 				<time datetime="{{ post.date | machineDate }}">
-					<small>{{ post.date | readableDate }} by <a href="/authors/{{ post.data.author | slug }}/">{{ post.data.author }}</a></small>
+					<small>{{ post.date | readableDate }}{# by <a href="/authors/{{ post.data.author | slug }}/">{{ post.data.author }}</a> #}
+					{% if post.data.tags %}
+						⋅
+						{% for tag in post.data.tags %}
+						{%- if tag != "post" -%}
+							{% set tagUrl %}/tags/{{ tag }}/{% endset %}
+						<a href="{{ tagUrl | url }}" rel="tag">{{ tag }}</a>
+						{%- endif -%}
+						{% endfor %}
+					{% endif %}
+					</small>
 				</time>
 			</p>
-			{% if post.data.tags %}
+			{# {% if post.data.tags %}
 				<p>
 					{% for tag in post.data.tags %}
 		  			{%- if tag != "post" -%}
@@ -29,7 +39,7 @@
 		  			{%- endif -%}
 					{% endfor %}
 				</p>
-			{% endif %}
+			{% endif %} #}
 		</article>
 	{% endfor %}
 </section>
