--- a/_includes/layouts/blog.njk
+++ b/_includes/layouts/blog.njk
@@ -3,7 +3,7 @@ layout: layouts/base.njk
 section: blog
 permalink: /blog/index.html
 ---
-<h1>{{ title }}</h1>
+{# <h1 class="pagetitle">Latest in blog:</h1> #}
 
 {{ layoutContent | safe }}
 
