--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -15,4 +15,5 @@
   {% endset %}
   <script>{{ js | jsmin | safe }}</script>
   <script defer src="{{ '/_includes/assets/js/router.js' | url }}"></script> <!-- Router -->
+  <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
 </head>
