--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -61,11 +61,18 @@ body {
 	display: grid;
 	/* grid-gap: 1em; */
 	grid-template-rows: 1fr auto;
+
+	grid-template-columns:
+		[full-start] minmax(1em, 1fr) [main-start] minmax(0, 40em) [main-end] minmax(1em, 1fr) [full-end];
+
 	justify-content: center;
 	min-height: 100vh;
 
 	color: var(--text);
 	background-color: var(--background);
+
+	/* scrollbar-gutter: stable both-edges; */
+	overflow-y: scroll;
 }
 
 /* Fix these elements not inheriting body's font or color */
@@ -87,6 +94,8 @@ footer {
 }
 
 main {
+	grid-column: 2;
+
 	padding: 1em;
 	margin-top: 4em;
 	min-width: 0;
@@ -101,6 +110,8 @@ header {
 }
 
 footer {
+	grid-column: 2;
+
 	border-top: 1px solid var(--secondary);
 	margin-top: 2em;
 	margin-bottom: 1em;
@@ -155,6 +166,7 @@ main>article :first-child {
 pre {
 	overflow: auto;
 	max-height: 50vh;
+	grid-column: full;
 }
 
 /* Scrollbar */
@@ -211,7 +223,7 @@ header nav ul {
 header nav li {
 	display: inline-block;
 	margin: .25em .25em;
-	transition: transform 0.02s, box-shadow 0.08s, background-color 0.15s, color 0.15s;
+	transition: transform 0.08s, box-shadow 0.08s, background-color 0.15s, color 0.15s;
 	border-radius: 1px;
 	border: 1px solid var(--secondary);
 	/* pointer-events: auto; */
@@ -220,24 +232,25 @@ header nav li {
 header nav li[data-current="current item"] {
 	background-color: var(--secondary);
 	box-shadow: var(--shadow-elevation-low);
-	transform: rotate(-7deg);
+	transform: rotate(-7deg) scale(1.2);
 }
 
 header nav li[data-current="current item"] a {
 	cursor: default;
 	pointer-events: none;
 	display: inline-block;
-	transform: rotate(7deg);
+	transform: rotate(7deg) scale(1);
 }
 
 header nav li a {
+	display: block;
+	/* Makes entire li clickable */
 	padding: .25em .5em;
 	margin: 0 .25em;
 	text-decoration: none;
 }
 
 header nav ul:hover>* {
-	/* opacity: 0.8; */
 	background-color: var(--background);
 	box-shadow: none;
 }
